--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aif-db",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "It is a simple and fast NoSQL database",
   "author": {
     "name": "Martin R. Mondragon Sotelo",
@@ -9,7 +9,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "node ./test",
-    "build": "babel src -d dist"
+    "build": "babel src -d dist && node ./pack"
   },
   "homepage": "https://github.com/mygnet/aif-db",
   "repository": {
@@ -30,11 +30,12 @@
   ],
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1"
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-minify": "^0.5.1"
   },
   "dependencies": {
-    "aif-cipher": "^0.0.1",
-    "aif-str": "^0.0.1",
+    "aif-cipher": "0.0.4",
+    "aif-str": "0.0.5",
     "shelljs": "^0.8.3"
   }
 }
